# wpe_backend

./: .env  .env.example  .gitignore  OIMS_REVERSE_ENGINEERING.md  create_superuser.py  main.py  manage.py  pyproject.toml  pyrightconfig.json
LOGIN/Auth/: urls.py  views.py
LOGIN/LOGIN/: asgi.py  settings.py  urls.py  wsgi.py
MASTERS/: manage.py
MASTERS/Items/: models.py  serializers.py  tests.py  urls.py  views.py
MASTERS/Items/migrations/: 0001_initial.py
MASTERS/MASTERS/: asgi.py  auth_urls.py  auth_views.py  settings.py  urls.py  wsgi.py
MASTERS/Presales/: apps.py  models.py  serializers.py  urls.py  views.py
MASTERS/Purchases_Inwards/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
MASTERS/Purchases_Inwards/migrations/: 0001_initial.py  0002_remove_grn_supplier_grn_accepted_qty_grn_address1_and_more.py  0003_grn_moved_to_qcr_at_grn_moved_to_qcr_by_and_more.py  0004_grn_qcr_unique_id_grn_raw_payload.py
MASTERS/Purchases_Iwards/: apps.py  serializers.py  tests.py  urls.py  views.py
core_system/: manage.py
core_system/common/: authentication.py  drf.py  grn_client.py  middleware.py  rbac.py  user_provisioning.py
core_system/core_system/: api_router.py  asgi.py  settings.py  urls.py  wsgi.py
docs/: hybrid_architecture.md
grn_service/: manage.py  pyrightconfig.json
grn_service/grn_app/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
grn_service/grn_service/: asgi.py  settings.py  urls.py  wsgi.py
scale-bridge/: .env  .env.example  README.md  bridge.py  requirements.txt
(+224 files in other folders)
