[project]
name = "wpe-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.4",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "openpyxl>=3.1.5",
    "mysqlclient>=2.2.8",
    "pillow>=12.2.0",
    "dotenv>=0.9.9",
    "djangorestframework-simplejwt>=5.5.1",
    "argon2-cffi>=25.1.0",
    "rg>=0.0.76",
]
